2001-12-21  jacob berkman  <jacob@ximian.com>

	* gnome_segv.c (main): export an env var to tell bug-buddy that we
	are a gnome 2 app.

2001-12-21  Mark McLoughlin  <mark@skynet.ie>

	* gnome-entry.c: (build_gconf_key): escape app_id before
	using it in the gconf key.

2001-12-19  jacob berkman  <jacob@ximian.com>

	* gnome-stock-icons.h (GNOME_STOCK_PIXMAP_SCORES): define to
	GNOME_STOCK_SCORES

2001-12-14  Josh Barrow  <drleary@mac.com>

	* Makefile.am:
	Removed references to libgnomeui.schemas.  It no longer lives
	here.

2001-12-14  jacob berkman  <jacob@ximian.com>

	* Makefile.am: another attempt at generated files fixage

Fri Dec 14 16:24:04 2001  Jonathan Blandford  <jrb@redhat.com>

	* libgnomeui.schemas: remove half-backed schema here.

	* gnome-app-helper.c (setup_image_menu_item): change schema key.

2001-12-14  Anders Carlsson  <andersca@gnu.org>

	* Makefile.am: Fix marshal build.

2001-12-13  Darin Adler  <darin@bentspoon.com>

	* .cvsignore: Ignore the generated marshal files.

2001-12-11  Ettore Perazzoli  <ettore@ximian.com>

	* Makefile.am: Add `gnome-marshal-main.c' to `BUILT_SOURCES'.

2001-12-11  jacob berkman  <jacob@ximian.com>

	* gnome-mdi.c (gnome_mdi_class_init): use our private marshaller,
	and not the libgnome one

2001-12-10  jacob berkman  <jacob@ximian.com>

	* Makefile.am (gnome-marshal-main.c): add an explicit dep here
	because automake sucks

2001-12-10  Yanko Kaneti  <yaneti@declera.com>

	* libgnomeui.schemas: (menus/show-icons) fix default value 
	
Sun Dec 09 14:24:57 2001  George Lebl <jirka@5z.com>

	* gnome-icon-entry.c: don't use the deprecated _gtk_entry method
	  internally even. (it's kind of hypocritical of a widget to use
	  it's own deprecated api)

Sun Dec 09 14:15:01 2001  George Lebl <jirka@5z.com>

	* gnome-dialog.c, gnome-messagebox.c: Contrary to popular belief,
	  va_list is not a pointer and certainly not a string vector.  Use
	  the constructv method in the messagebox and don't check for