@@ -1,3 +1,8 @@
+Sat Dec 22 23:29:15 2001  George Lebl <jirka@5z.com>
+
+	* gnome-icon-list.c: do a little bit of removing the use of
+	  deprecated gtk methods.  Probably because I was bored.
+
 2001-12-21  jacob berkman  <jacob@ximian.com>
 
 	* gnome_segv.c (main): export an env var to tell bug-buddy that we
